# ip-to-file

./: LICENSE  README  README.md  ip-to-file.cabal
app/: Main.hs
app/Iptf/: Options.hs
benchmark/: Bench.hs  bench-getIP.html
iptf-arbitrary/src/Iptf/: Arbitrary.hs
src/: Iptf.hs  Main.hs
src/Data/: Changeable.hs
src/Iptf/: Hosts.hs  Ip.hs  Options.hs  Parse.hs
src/Iptf/Hosts/: IO.hs  Internal.hs
src/Iptf/Ip/: Internal.hs
test/: Spec.hs
test/Iptf/: Hosts_Test.hs
test/file/: hosts2  hosts3
