name:                ip-to-file
version:             0.2.0.0
synopsis:            Command line tool to write your public IP to a file
description:         Please see README.md
license:             MIT
license-file:        LICENSE
author:              Micah Werbitt
maintainer:          micah@werbitt.net
-- copyright:
category:            Network
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:    src
  exposed-modules:   Iptf
  other-modules:     Iptf.Hosts
                   , Iptf.Ip
  build-depends:     text >= 1.1.1.3
                   , async >= 2.0.1.6
                   , attoparsec >= 0.12.1.2
                   , base >=4.7 && <4.8
                   , bytestring >= 0.10.3.0
                   , containers >= 0.5.5.1
                   , exceptions >= 0.6.1
                   , http-conduit >= 2.1.4.4
                   , resourcet >= 1.1.2.3
                   , transformers >= 0.3.0.0
  default-language: Haskell2010
                      , Iptf.Hosts.Internal
                      , Iptf.Ip.Internal

executable ip-to-file-exe
  hs-source-dirs:    app
  main-is:           Main.hs
  ghc-options:       -threaded -rtsopts -with-rtsopts=-N
  build-depends:     base
                   , ip-to-file
  default-language:  Haskell2010
                      , optparse-applicative >= 0.10.0
                      , text >= 1.1.1.3

test-suite ip-to-file-test
  type:              exitcode-stdio-1.0
  hs-source-dirs:    test
  main-is:           Spec.hs
  build-depends:     base
                   , ip-to-file
  ghc-options:       -threaded -rtsopts -with-rtsopts=-N
  default-language:  Haskell2010
